# order-flow

./: .gitignore  LICENSE  README.md  README.template.md  environment.yml  pyproject.toml
models/: point_process.py  poisson_process.py
py/: decayed_counts.py  download_trades.py  plot_power_law_approx.py  point_process.py  power_law_approx.py
results/constant/: convergence_stats.json  diagnostics.csv  params.csv
results/hawkes/: convergence_stats.json  diagnostics.csv  params.csv
results/overall/: loglik_mean.csv  loglik_relative.csv
results/pl_hawkes/: convergence_stats.json  diagnostics.csv  params.csv
results/rbf/: convergence_stats.json  diagnostics.csv  params.csv
results/rbf_hawkes/: convergence_stats.json  diagnostics.csv  params.csv
scripts/: download_trades.py  plot_power_law_approx.py  preprocess_data.py
src/: decayed_counts.py  download_trades.py  generate_reports.py  optim.py  point_process.py  power_law_approx.py
