[project]
name = "order-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chex>=0.1.91",
    "hypothesis>=6.151.9",
    "jax>=0.9.1",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "optax>=0.2.7",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]
